crates/compiler/semantic/tests/common/snapshots/diagnostics__types::literal_type_inference_tests::test_mixed_type_operations_still_error.snap
---
source: crates/compiler/semantic/tests/common/mod.rs
description: "Inline semantic validation error test: types::literal_type_inference_tests::test_mixed_type_operations_still_error"
---
Fixture: semantic_tests::types::literal_type_inference_tests::test_mixed_type_operations_still_error
============================================================
Source code:

        fn test() {
            let x: u32 = 10;
            let y: felt = 20;
            let z = x + y;           // Error: can't add u32 + felt
            return;
        }
        
============================================================
Found 1 diagnostic(s):

--- Diagnostic 1 ---
[2001] Error: Invalid right operand for arithmetic operator `+`. Expected `u32`, found `felt`
   ╭─[ semantic_tests::types::literal_type_inference_tests::test_mixed_type_operations_still_error:5:25 ]
   │
 5 │             let z = x + y;           // Error: can't add u32 + felt
   │                         ┬  
   │                         ╰── Invalid right operand for arithmetic operator `+`. Expected `u32`, found `felt`
───╯
